--- a/style.css
+++ b/style.css
@@ -1,1 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+body{
+font-family: source sans pro;
+background-color: rgb(226,226,226)  
+}
+
+h1{
+font-family: Abril Fatface;
+text-align: center;
+font-size: large;
+}
+
+h2{
+font-family: Roboto Slab; 
+
+
+}
+
+h5{
+    color:red;
+    font-family: sans-serif;
+    font-size: 16;
+    }
+p{
+
+text-align: justify;
+padding: 20px;
+    
+}
+
+li{
+margin-right: 20px;
+padding:20px;   
+}
+
+li a:hover{
+background-color: #777;
+}
+    
+ul{
+display: inline-flex;
+list-style-type: none;
+border-top:solid 1px #777;
+border-bottom:solid 1px #777;
+}
+
+img{
+    width: 100%;
+
+}
+
+.newspaper-container{
+width: 700px;
+background-color: #eee;
+width: 70%;
+border-radius: 20px;
+box-shadow: 5px black;
+margin-left: 250px;
+}
+
+
+
+a{
+    color:#777;
+    display: block;
+    padding: 5px;
+    color: #777;
+    text-decoration: none; 
+    border-top: 20px;
+    border-bottom: 20px;
+}
+
+
+
+.date{
+    float:left;
+
+}
+
+
+.more-articles{
+display: flex;
+text-align: justify;
+border-top: 1px solid #eee;
+
+}
+
+section{
+
+    padding: 10px;
+}
